<resources>
    <string name="app_name">Teleport</string>

    <!-- TODO: Remove or change this placeholder text -->
	<string name="share">Share</string>
	<string name="settings">Settings</string>
	<string name="initial_time">00:00</string>
	<string name="start">start</string>
	<string name="stop">stop</string>
	<string name="reset">reset</string>
	<string name="activity_main_title">Teleport</string>
    <string name="title_activity_delivery_detail">Delivery Details</string>
	<string name="action_create_delivery">Create delivery</string>
	<string name="open_drawer">Open Drawer</string>
	<string name="close_drawer">Close Drawer</string>
	
	<!--DELIVERY DETIALS -->
	<string name="from">From</string>
	<string name="send_to">Send To</string>
	<string name="weight">Weight</string>
	<string name="title">Title</string>
	<string name="favourites">Favourites</string>
	
	
	<!-- CREATE ORDER ACTIVITY -->
	<string name="submit"> Submit</string>
	
	
	<string-array
		name="titles">
		<item>Home</item>
		<item>Favourite</item>
		<item>Past Deliveries</item>
	</string-array>
</resources>
