<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:columnCount="2">
	<TextView
		android:layout_column="0"
		android:layout_row="0"
		android:text="@string/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	/>
	
	<EditText
		android:layout_column="1"
		android:layout_row="0"
		android:id="@+id/create_order_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	</EditText>
	
	<TextView
		android:layout_column="0"
		android:layout_row="1"
		android:text="@string/send_to"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	/>
	<EditText
		android:layout_column="1"
		android:layout_row="1"
		android:id="@+id/create_order_send_to"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	</EditText>
	
	<TextView
		android:layout_column="0"
		android:layout_row="2"
		android:text="@string/from"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	/>
	<EditText
		android:layout_column="1"
		android:layout_row="2"
		android:id="@+id/create_order_sent_from"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	</EditText>
	<TextView
		android:layout_column="0"
		android:layout_row="3"
		android:text="@string/from"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	/>
	<EditText
		android:layout_column="1"
		android:layout_row="3"
		android:id="@+id/create_order_weight"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	</EditText>
	<Button
		android:layout_span="2"
		android:text="@string/submit"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		/>
    
</GridLayout>
